test(android): run Robolectric tests on JDK 17